== Groups by itthinx - changelog.txt

2024-12-25 - version 3.4.0
* Update - WordPress 6.7 compatible.
* Dev - Security validation WordPress.DB.PreparedSQL.InterpolatedNotPrepared
* Dev - Security validation WordPress.Security.EscapeOutput.OutputNotEscaped

= 3.3.1 =
* WordPress 6.7 compatible.
* Adds fixes for "Translation loading for the ... domain was triggered too early. This is usually an indicator for some code in the plugin or theme running too early. ..." PHP notices raised as of WordPress 6.7.0 in certain scenarios when translations are requested before the init or the after_setup_theme action have fired.
* Avoids a potential infinite recursion when evaluating post counts.
* Restrict the redirect to the welcome screen so it happens only when Groups is activated alone and not in bulk. Updates do not trigger a redirect. A legacy update does not trigger a redirect and now only causes an admin notice to be displayed temporarily.
* Updated the translation template.
* Updated the included translations.

= 3.3.0 =
* WordPress 6.7 compatible.
* Revised information and presentation of the welcome and add-ons sections.
* Revised the information provided in the readme.txt.
* Added several instances of missing output escaping.
* Using generic translations based on language (and form) when available.
* Updated the translation template.
* Updated the included translations.
* Revised several instances of code doc format.
* Added a lock icon for distinction on the Groups column header.

= 3.2.1 =
* WordPress 6.6 compatible.
* Updates script dependencies for blocks.
* Fixes blocks not available (regression bug in 3.2.0).
* Unified store used by blocks, avoids duplicate definition and console warning.

= 3.2.0 =
* WordPress 6.6 compatible.
* Revised Welcome screen.
* The option to show groups in user profiles is now enabled by default.
* Revised legacy option information.
* Updated the translation template.
* Updated the included translations.
* Revised the plugin tags.