@@ -4,6 +4,7 @@
 * Update - WordPress 6.7 compatible.
 * Dev - Security validation WordPress.DB.PreparedSQL.InterpolatedNotPrepared
 * Dev - Security validation WordPress.Security.EscapeOutput.OutputNotEscaped
+* Dev - Security validation WordPress.DB.PreparedSQL.NotPrepared
 
 = 3.3.1 =
 * WordPress 6.7 compatible.
